--- a/EXAMENS-FINAUX/1.md
+++ b/EXAMENS-FINAUX/1.md
@@ -13,107 +13,111 @@
 
 **Aucun document autorise**
 
+> Coche **une seule** reponse par question.
+> Format compatible GitHub (task lists).
+
 ---
 
 ## Partie A : Fondations ASP.NET Core (Questions 1-10)
 
 ### Question 1
+
 Dans une architecture Clean, quelle couche est responsable de la logique metier ?
 
-A) Controller
-B) Service
-C) Repository
-D) DbContext
+* [ ] Controller
+* [ ] Service
+* [ ] Repository
+* [ ] DbContext
 
 ---
 
 ### Question 2
 Qu'est-ce qu'Entity Framework Core ?
 
-A) Un framework pour creer des API
-B) Un ORM qui mappe les objets C# vers des tables SQL
-C) Un outil de migration de base de donnees
-D) Un systeme d'authentification
+* [ ] Un framework pour creer des API
+* [ ] Un ORM qui mappe les objets C# vers des tables SQL
+* [ ] Un outil de migration de base de donnees
+* [ ] Un systeme d'authentification
 
 ---
 
 ### Question 3
 Quel cycle de vie utilise-t-on pour un DbContext dans ASP.NET Core ?
 
-A) Singleton
-B) Transient
-C) Scoped
-D) Static
+* [ ] Singleton
+* [ ] Transient
+* [ ] Scoped
+* [ ] Static
 
 ---
 
 ### Question 4
 Ou configure-t-on la Dependency Injection dans ASP.NET Core ?
 
-A) Dans le constructeur des controllers
-B) Dans Program.cs avec builder.Services
-C) Dans appsettings.json
-D) Dans le DbContext
+* [ ] Dans le constructeur des controllers
+* [ ] Dans Program.cs avec builder.Services
+* [ ] Dans appsettings.json
+* [ ] Dans le DbContext
 
 ---
 
 ### Question 5
 Que fait la methode SaveChangesAsync() dans Entity Framework ?
 
-A) Sauvegarde un fichier
-B) Commit les changements du DbContext vers la base de donnees
-C) Cree une sauvegarde de la base
-D) Enregistre les logs
+* [ ] Sauvegarde un fichier
+* [ ] Commit les changements du DbContext vers la base de donnees
+* [ ] Cree une sauvegarde de la base
+* [ ] Enregistre les logs
 
 ---
 
 ### Question 6
 Quelle methode permet de charger une relation dans EF Core pour eviter les requetes N+1 ?
 
-A) .Join()
-B) .Include()
-C) .With()
-D) .Load()
+* [ ] .Join()
+* [ ] .Include()
+* [ ] .With()
+* [ ] .Load()
 
 ---
 
 ### Question 7
 Dans XtraWork, qui accede directement a la base de donnees ?
 
-A) Controller
-B) Service
-C) Repository
-D) Entity
+* [ ] Controller
+* [ ] Service
+* [ ] Repository
+* [ ] Entity
 
 ---
 
 ### Question 8
 Que signifie l'annotation [Required] sur une propriete d'entite ?
 
-A) La propriete doit etre initialisee dans le constructeur
-B) La colonne SQL ne peut pas etre NULL
-C) La propriete est obligatoire pour les tests
-D) La propriete doit etre unique
+* [ ] La propriete doit etre initialisee dans le constructeur
+* [ ] La colonne SQL ne peut pas etre NULL
+* [ ] La propriete est obligatoire pour les tests
+* [ ] La propriete doit etre unique
 
 ---
 
 ### Question 9
 Pourquoi utiliser async/await dans les methodes Repository ?
 
-A) C'est obligatoire en ASP.NET Core
-B) Pour ne pas bloquer le thread pendant les operations I/O
-C) Pour ameliorer la securite
-D) Pour utiliser moins de memoire
+* [ ] C'est obligatoire en ASP.NET Core
+* [ ] Pour ne pas bloquer le thread pendant les operations I/O
+* [ ] Pour ameliorer la securite
+* [ ] Pour utiliser moins de memoire
 
 ---
 
 ### Question 10
 Quelle commande applique les migrations a la base de donnees ?
 
-A) dotnet ef migrations add
-B) dotnet ef database create
-C) dotnet ef database update
-D) dotnet ef schema apply
+* [ ] dotnet ef migrations add
+* [ ] dotnet ef database create
+* [ ] dotnet ef database update
+* [ ] dotnet ef schema apply
 
 ---
 
@@ -122,100 +126,100 @@ D) dotnet ef schema apply
 ### Question 11
 Que signifie JWT ?
 
-A) Java Web Token
-B) JSON Web Token
-C) JavaScript Web Token
-D) JSON Web Template
+* [ ] Java Web Token
+* [ ] JSON Web Token
+* [ ] JavaScript Web Token
+* [ ] JSON Web Template
 
 ---
 
 ### Question 12
 Combien de parties compose un JWT ?
 
-A) 1
-B) 2
-C) 3
-D) 4
+* [ ] 1
+* [ ] 2
+* [ ] 3
+* [ ] 4
 
 ---
 
 ### Question 13
 Le payload d'un JWT est-il chiffre ?
 
-A) Oui, chiffre avec AES-256
-B) Oui, chiffre avec la cle secrete
-C) Non, seulement encode en Base64
-D) Oui, chiffre avec RSA
+* [ ] Oui, chiffre avec AES-256
+* [ ] Oui, chiffre avec la cle secrete
+* [ ] Non, seulement encode en Base64
+* [ ] Oui, chiffre avec RSA
 
 ---
 
 ### Question 14
 A quoi sert la signature d'un JWT ?
 
-A) Chiffrer les donnees
-B) Prouver que le token est authentique et n'a pas ete modifie
-C) Compresser le token
-D) Stocker le mot de passe
+* [ ] Chiffrer les donnees
+* [ ] Prouver que le token est authentique et n'a pas ete modifie
+* [ ] Compresser le token
+* [ ] Stocker le mot de passe
 
 ---
 
 ### Question 15
 Dans XtraWork, quelle est la duree de validite d'un JWT ?
 
-A) 15 minutes
-B) 1 heure
-C) 24 heures
-D) 30 jours
+* [ ] 15 minutes
+* [ ] 1 heure
+* [ ] 24 heures
+* [ ] 30 jours
 
 ---
 
 ### Question 16
 Quelle methode ASP.NET Core configure l'authentification JWT ?
 
-A) builder.Services.AddJwt()
-B) builder.Services.AddAuthentication()
-C) builder.Services.ConfigureJwt()
-D) builder.Services.UseJwtBearer()
+* [ ] builder.Services.AddJwt()
+* [ ] builder.Services.AddAuthentication()
+* [ ] builder.Services.ConfigureJwt()
+* [ ] builder.Services.UseJwtBearer()
 
 ---
 
 ### Question 17
 Dans quel ordre doivent etre les middlewares ?
 
-A) UseAuthorization puis UseAuthentication
-B) UseAuthentication puis UseAuthorization
-C) L'ordre n'a pas d'importance
-D) UseAuthentication seulement
+* [ ] UseAuthorization puis UseAuthentication
+* [ ] UseAuthentication puis UseAuthorization
+* [ ] L'ordre n'a pas d'importance
+* [ ] UseAuthentication seulement
 
 ---
 
 ### Question 18
 Que fait l'attribut [Authorize] sur un controller ?
 
-A) Autorise tous les utilisateurs
-B) Necessite un JWT valide pour acceder
-C) Genere un JWT
-D) Verifie le mot de passe
+* [ ] Autorise tous les utilisateurs
+* [ ] Necessite un JWT valide pour acceder
+* [ ] Genere un JWT
+* [ ] Verifie le mot de passe
 
 ---
 
 ### Question 19
 Comment specifier qu'un endpoint est accessible seulement aux Admins ?
 
-A) [Authorize]
-B) [Authorize(Roles = "Admin")]
-C) [AdminOnly]
-D) [RequireRole("Admin")]
+* [ ] [Authorize]
+* [ ] [Authorize(Roles = "Admin")]
+* [ ] [AdminOnly]
+* [ ] [RequireRole("Admin")]
 
 ---
 
 ### Question 20
 Dans XtraWork, ou le frontend envoie-t-il le JWT ?
 
-A) Dans l'URL
-B) Dans le body de la requete
-C) Dans le header Authorization
-D) Dans un cookie
+* [ ] Dans l'URL
+* [ ] Dans le body de la requete
+* [ ] Dans le header Authorization
+* [ ] Dans un cookie
 
 ---
 
@@ -224,100 +228,100 @@ D) Dans un cookie
 ### Question 21
 Que signifie REST ?
 
-A) Rapid Exchange State Transfer
-B) Representational State Transfer
-C) Remote Execution State Transfer
-D) Resource Exchange Standard Transfer
+* [ ] Rapid Exchange State Transfer
+* [ ] Representational State Transfer
+* [ ] Remote Execution State Transfer
+* [ ] Resource Exchange Standard Transfer
 
 ---
 
 ### Question 22
 Quelle methode HTTP utilise-t-on pour creer une ressource ?
 
-A) GET
-B) CREATE
-C) POST
-D) INSERT
+* [ ] GET
+* [ ] CREATE
+* [ ] POST
+* [ ] INSERT
 
 ---
 
 ### Question 23
 Comment recuperer un parametre du body JSON ?
 
-A) [FromBody]
-B) [FromJson]
-C) [BodyParameter]
-D) Automatique
+* [ ] [FromBody]
+* [ ] [FromJson]
+* [ ] [BodyParameter]
+* [ ] Automatique
 
 ---
 
 ### Question 24
 Quel status code retourner apres avoir cree une ressource ?
 
-A) 200 OK
-B) 201 Created
-C) 202 Accepted
-D) 204 No Content
+* [ ] 200 OK
+* [ ] 201 Created
+* [ ] 202 Accepted
+* [ ] 204 No Content
 
 ---
 
 ### Question 25
 Quelle methode retourne HTTP 404 Not Found ?
 
-A) Missing()
-B) NotFound()
-C) Error404()
-D) ResourceNotFound()
+* [ ] Missing()
+* [ ] NotFound()
+* [ ] Error404()
+* [ ] ResourceNotFound()
 
 ---
 
 ### Question 26
 Avec [ApiController], que se passe-t-il si ModelState.IsValid est false ?
 
-A) Exception levee
-B) 400 Bad Request automatique
-C) Execution continue
-D) 500 Internal Server Error
+* [ ] Exception levee
+* [ ] 400 Bad Request automatique
+* [ ] Execution continue
+* [ ] 500 Internal Server Error
 
 ---
 
 ### Question 27
 Quelle bibliotheque de validation utilise XtraWork ?
 
-A) DataAnnotations
-B) FluentValidation
-C) System.ComponentModel.DataAnnotations
-D) ValidationHelper
+* [ ] DataAnnotations
+* [ ] FluentValidation
+* [ ] System.ComponentModel.DataAnnotations
+* [ ] ValidationHelper
 
 ---
 
 ### Question 28
 Quelle est la difference entre HTTP 401 et HTTP 403 ?
 
-A) Pas de difference
-B) 401 = pas authentifie, 403 = pas autorise
-C) 401 = erreur serveur, 403 = erreur client
-D) 401 = token invalide, 403 = token expire
+* [ ] Pas de difference
+* [ ] 401 = pas authentifie, 403 = pas autorise
+* [ ] 401 = erreur serveur, 403 = erreur client
+* [ ] 401 = token invalide, 403 = token expire
 
 ---
 
 ### Question 29
 Dans XtraWork, quelle exception est levee si une ressource n'existe pas ?
 
-A) ResourceNotFoundException
-B) NotFoundException
-C) EntityNotFoundException
-D) MissingException
+* [ ] ResourceNotFoundException
+* [ ] NotFoundException
+* [ ] EntityNotFoundException
+* [ ] MissingException
 
 ---
 
 ### Question 30
 Dans une API REST, les URLs doivent contenir :
 
-A) Des verbes (getEmployees, createEmployee)
-B) Des noms de ressources (employees, titles)
-C) Des actions (retrieve, insert)
-D) Peu importe
+* [ ] Des verbes (getEmployees, createEmployee)
+* [ ] Des noms de ressources (employees, titles)
+* [ ] Des actions (retrieve, insert)
+* [ ] Peu importe
 
 ---
 
