--- a/EXAMENS-FINAUX/2.md
+++ b/EXAMENS-FINAUX/2.md
@@ -2,25 +2,11 @@
 
 ## ASP.NET Core : Services, DTOs, et CORS
 
----
 
-## Instructions
-
-**Duree** : 60 minutes
-**Questions** : 30 questions a choix multiple
-**Bareme** : 1 point par bonne reponse / 30 points total
-**Seuil de reussite** : 21/30 (70%)
-
-**Aucun document autorise**
-
-> Coche **une seule** reponse par question.
-> Format compatible GitHub (task lists).
-
----
 
 ## Partie A : Services et Repositories (Questions 1-10)
 
-### Question 1
+# Question 1
 
 **Context** : Dans XtraWork, voici la structure en couches :
 ```
@@ -34,9 +20,10 @@ EmployeeController → EmployeeService → EmployeeRepository → DbContext
 * [ ] Gerer les requetes HTTP
 * [ ] Mapper les DTOs
 
----
+<br/>
+<br/>
 
-### Question 2
+# Question 2
 
 **Context** : Voici un Repository typique dans XtraWork :
 ```csharp
@@ -58,9 +45,11 @@ public class EmployeeRepository
 * [ ] Abstraction de l'acces aux donnees
 * [ ] Generation de JWT
 
----
+<br/>
+<br/>
 
-### Question 3
+
+# Question 3
 
 **Context** : Voici le constructeur d'EmployeeService :
 ```csharp
@@ -86,9 +75,11 @@ public class EmployeeService
 * [ ] Plusieurs (exemple : EmployeeService injecte 2 repositories)
 * [ ] Tous les repositories existants
 
----
+<br/>
+<br/>
 
-### Question 4
+
+# Question 4
 Que retourne Task<T> en C# ?
 
 * [ ] Un thread
@@ -96,9 +87,11 @@ Que retourne Task<T> en C# ?
 * [ ] Un tableau
 * [ ] Une exception
 
----
+<br/>
+<br/>
 
-### Question 5
+
+# Question 5
 Pourquoi utiliser async/await dans les methodes Repository ?
 
 * [ ] C'est obligatoire en ASP.NET Core
@@ -106,9 +99,11 @@ Pourquoi utiliser async/await dans les methodes Repository ?
 * [ ] Pour ameliorer la securite
 * [ ] Pour utiliser moins de memoire
 
----
+<br/>
+<br/>
 
-### Question 6
+
+# Question 6
 
 **Context** : Extrait de EmployeeService.Create() :
 ```csharp
@@ -132,9 +127,11 @@ public async Task<EmployeeResponse> Create(EmployeeRequest request)
 * [ ] Pour eviter les erreurs SQL
 * [ ] C'est optionnel
 
----
+<br/>
+<br/>
 
-### Question 7
+
+# Question 7
 Ou doit se faire la validation des regles metier ?
 
 * [ ] Dans le Controller
@@ -142,9 +139,11 @@ Ou doit se faire la validation des regles metier ?
 * [ ] Dans le Repository
 * [ ] Dans l'Entity
 
----
+<br/>
+<br/>
 
-### Question 8
+
+# Question 8
 Que fait la methode ToListAsync() dans EF Core ?
 
 * [ ] Cree une liste vide
@@ -152,9 +151,11 @@ Que fait la methode ToListAsync() dans EF Core ?
 * [ ] Convertit un tableau en liste
 * [ ] Sauvegarde les donnees
 
----
+<br/>
+<br/>
 
-### Question 9
+
+# Question 9
 Quelle est la difference entre un Service et un Repository ?
 
 * [ ] Pas de difference
@@ -162,9 +163,11 @@ Quelle est la difference entre un Service et un Repository ?
 * [ ] Service = HTTP, Repository = SQL
 * [ ] Repository = async, Service = sync
 
----
+<br/>
+<br/>
 
-### Question 10
+
+# Question 10
 Dans XtraWork, ou se trouve le mapping Entity vers DTO ?
 
 * [ ] Dans le Controller
@@ -172,11 +175,13 @@ Dans XtraWork, ou se trouve le mapping Entity vers DTO ?
 * [ ] Dans le Repository
 * [ ] Dans l'Entity
 
----
+<br/>
+<br/>
+
 
 ## Partie B : DTOs et Mapping (Questions 11-20)
 
-### Question 11
+# Question 11
 
 **Context** : Dans XtraWork, on a :
 - Entities/ : Employee, Title, User (modeles de base de donnees)
@@ -190,9 +195,11 @@ Dans XtraWork, ou se trouve le mapping Entity vers DTO ?
 * [ ] Database Transaction Object
 * [ ] Dynamic Type Object
 
----
+<br/>
+<br/>
 
-### Question 12
+
+# Question 12
 
 **Context** : Comparaison Entity vs DTO Response :
 ```csharp
@@ -220,9 +227,11 @@ public class EmployeeResponse
 * [ ] Pour respecter les conventions de nommage
 * [ ] Pour ameliorer les performances
 
----
+<br/>
+<br/>
 
-### Question 13
+
+# Question 13
 Quelle est la difference entre Request et Response DTOs ?
 
 * [ ] Pas de difference
@@ -230,9 +239,11 @@ Quelle est la difference entre Request et Response DTOs ?
 * [ ] Request = GET, Response = POST
 * [ ] Request = client, Response = serveur
 
----
+<br/>
+<br/>
 
-### Question 14
+
+# Question 14
 Pourquoi EmployeeResponse n'a pas de navigation property Title complete ?
 
 * [ ] Pour economiser de la memoire
@@ -240,9 +251,11 @@ Pourquoi EmployeeResponse n'a pas de navigation property Title complete ?
 * [ ] C'est une erreur
 * [ ] Pour accelerer la serialisation
 
----
+<br/>
+<br/>
 
-### Question 15
+
+# Question 15
 
 **Context** : Extrait d'EmployeeService.Create() :
 ```csharp
@@ -271,9 +284,11 @@ public async Task<EmployeeResponse> Create(EmployeeRequest request)
 * [ ] Dans le Repository
 * [ ] Automatiquement par EF Core
 
----
 
-### Question 16
+<br/>
+<br/>
+
+# Question 16
 Qu'est-ce que AutoMapper ?
 
 * [ ] Un outil de navigation
@@ -281,9 +296,11 @@ Qu'est-ce que AutoMapper ?
 * [ ] Un generateur de DTOs
 * [ ] Un validateur
 
----
+<br/>
+<br/>
 
-### Question 17
+
+# Question 17
 Pourquoi UserResponse n'expose pas PasswordHash ?
 
 * [ ] Pour economiser de la bande passante
@@ -291,9 +308,11 @@ Pourquoi UserResponse n'expose pas PasswordHash ?
 * [ ] C'est trop long
 * [ ] Pour respecter RGPD
 
----
+<br/>
+<br/>
 
-### Question 18
+
+# Question 18
 Dans EmployeeResponse, la propriete Age est :
 
 * [ ] Stockee en base de donnees
@@ -301,9 +320,11 @@ Dans EmployeeResponse, la propriete Age est :
 * [ ] Envoyee par le client
 * [ ] Generee par EF Core
 
----
+<br/>
+<br/>
 
-### Question 19
+
+# Question 19
 Quelle annotation valide qu'un champ Request est requis ?
 
 * [ ] [Mandatory]
@@ -311,7 +332,9 @@ Quelle annotation valide qu'un champ Request est requis ?
 * [ ] [NotNull]
 * [ ] [Obligatoire]
 
----
+<br/>
+<br/>
+
 
 ### Question 20
 Pourquoi mapper Employee.Title.Description vers EmployeeResponse.TitleDescription ?
@@ -321,11 +344,13 @@ Pourquoi mapper Employee.Title.Description vers EmployeeResponse.TitleDescriptio
 * [ ] C'est obligatoire
 * [ ] Pour la performance
 
----
+<br/>
+<br/>
+
 
 ## Partie C : CORS et Securite (Questions 21-30)
 
-### Question 21
+# Question 21
 
 **Context** : Dans XtraWork, le frontend tourne sur http://localhost:3000 et le backend sur https://localhost:7033. Ce sont des origines differentes (ports differents).
 
@@ -336,9 +361,11 @@ Pourquoi mapper Employee.Title.Description vers EmployeeResponse.TitleDescriptio
 * [ ] Cross-Origin Request Security
 * [ ] Common Origin Resource Sharing
 
----
+<br/>
+<br/>
 
-### Question 22
+
+# Question 22
 Pourquoi le navigateur bloque-t-il les requetes cross-origin par defaut ?
 
 * [ ] Pour economiser la bande passante
@@ -346,9 +373,11 @@ Pourquoi le navigateur bloque-t-il les requetes cross-origin par defaut ?
 * [ ] C'est un bug
 * [ ] Pour accelerer le chargement
 
----
+<br/>
+<br/>
 
-### Question 23
+
+# Question 23
 
 **Context** : Configuration CORS dans XtraWork/Program.cs :
 ```csharp
@@ -370,9 +399,11 @@ builder.Services.AddCors(options =>
 * [ ] Seulement https://localhost:3000
 * [ ] Aucune origine
 
----
+<br/>
+<br/>
 
-### Question 24
+
+# Question 24
 Que signifie AllowCredentials() dans la configuration CORS ?
 
 * [ ] Autoriser les mots de passe
@@ -380,9 +411,11 @@ Que signifie AllowCredentials() dans la configuration CORS ?
 * [ ] Autoriser tous les utilisateurs
 * [ ] Autoriser HTTPS
 
----
+<br/>
+<br/>
 
-### Question 25
+
+# Question 25
 
 **Context** : Pipeline de middleware dans XtraWork/Program.cs :
 ```csharp
@@ -399,9 +432,11 @@ app.MapControllers();
 * [ ] L'ordre n'a pas d'importance
 * [ ] CORS n'est pas un middleware
 
----
+<br/>
+<br/>
 
-### Question 26
+
+# Question 26
 Qu'est-ce qu'une requete preflight ?
 
 * [ ] Une requete de test avant deploiement
@@ -409,9 +444,11 @@ Qu'est-ce qu'une requete preflight ?
 * [ ] La premiere requete de l'application
 * [ ] Une requete de verification SSL
 
----
+<br/>
+<br/>
 
-### Question 27
+
+# Question 27
 Pourquoi HTTPS est-il obligatoire en production pour une API avec JWT ?
 
 * [ ] C'est plus rapide
@@ -419,9 +456,11 @@ Pourquoi HTTPS est-il obligatoire en production pour une API avec JWT ?
 * [ ] Pour economiser de la memoire
 * [ ] C'est une loi
 
----
+<br/>
+<br/>
 
-### Question 28
+
+# Question 28
 
 **Context** : Dans AuthService.cs lors de l'inscription :
 ```csharp
@@ -447,9 +486,11 @@ if (!BCrypt.Net.BCrypt.Verify(request.Password, user.PasswordHash))
 * [ ] BCrypt
 * [ ] Pas de hash
 
----
+<br/>
+<br/>
 
-### Question 29
+
+# Question 29
 Que fait UseHttpsRedirection() ?
 
 * [ ] Active HTTPS
@@ -457,9 +498,11 @@ Que fait UseHttpsRedirection() ?
 * [ ] Verifie les certificats SSL
 * [ ] Genere des certificats
 
----
+<br/>
+<br/>
 
-### Question 30
+
+# Question 30
 
 **Context** : Dans XtraWork/appsettings.json :
 ```json
@@ -478,31 +521,4 @@ Cette cle fait 64 caracteres.
 * [ ] 16 caracteres
 * [ ] 32 caracteres (minimum)
 * [ ] 64 caracteres (recommande)
-
----
-
-## Fin de l'examen
-
-**Total** : 30 questions
-
-**Bareme de notation** :
-- 27-30 points : Excellent (A)
-- 24-26 points : Tres bien (B)
-- 21-23 points : Bien (* [ ] - Seuil de reussite
-- 18-20 points : Passable (D)
-- < 18 points : Insuffisant (F) - Echec
-
----
-
-**Date de l'examen** : ___________________
-
-**Nom de l'etudiant** : ___________________
-
-**Signature** : ___________________
-
----
-
-**Les reponses sont dans le fichier EXAMEN-NATIONAL-PARTIE-2-REPONSES.md**
-
-**A ne pas distribuer aux etudiants avant la correction**
 
