--- a/EXAMENS-FINAUX/4.md
+++ b/EXAMENS-FINAUX/4.md
@@ -1,16 +1,7 @@
 # EXAMEN PRATIQUE - Analyse de Code XtraWork
 
-## Instructions
 
-**Duree** : 90 minutes
-**Type** : Questions ouvertes avec analyse de code
-**Bareme** : Variable par question (total 100 points)
-
-**Analysez les extraits de code du projet XtraWork et repondez aux questions.**
-
----
-
-## Question 1 (10 points)
+# Question 1 
 
 **Extrait** : XtraWork/Program.cs
 ```csharp
@@ -31,9 +22,10 @@ builder.Services.AddScoped<IAuthService, AuthService>();
 2. Pourquoi AuthService utilise une interface `IAuthService` ? (3 points)
 3. Quel serait le probleme si on inversait l'ordre (Services avant Repositories) ? (3 points)
 
----
+<br/>
+<br/>
 
-## Question 2 (15 points)
+# Question 2
 
 **Extrait** : XtraWork/Services/EmployeeService.cs
 ```csharp
@@ -80,9 +72,10 @@ public async Task<EmployeeResponse> Create(EmployeeRequest request)
 2. Expliquez pourquoi on fait GetByIdAsync apres CreateAsync (5 points)
 3. Pourquoi mapper vers EmployeeResponse au lieu de retourner Employee directement ? (5 points)
 
----
+<br/>
+<br/>
 
-## Question 3 (12 points)
+# Question 3
 
 **Extrait** : XtraWork/Repositories/EmployeeRepository.cs
 ```csharp
@@ -101,9 +94,10 @@ public async Task<List<Employee>> GetAllAsync()
 2. Que se passerait-il sans `.Include()` ? (3 points)
 3. Pourquoi utiliser `ToListAsync()` a la fin ? (3 points)
 
----
+<br/>
+<br/>
 
-## Question 4 (15 points)
+# Question 4
 
 **Extrait** : XtraWork/Services/AuthService.cs
 ```csharp
@@ -139,9 +133,10 @@ private string GenerateJwtToken(User user)
 2. Pourquoi utiliser HMAC-SHA256 pour la signature ? (4 points)
 3. Quelle est la duree de vie du token et pourquoi 24 heures ? (5 points)
 
----
+<br/>
+<br/>
 
-## Question 5 (10 points)
+# Question 5 
 
 **Extrait** : XtraWork/Controllers/EmployeeController.cs
 ```csharp
@@ -164,9 +159,10 @@ public class EmployeeController : ControllerBase
 1. Expliquez chaque attribut sur la classe ([ApiController], [Route], etc.) (6 points)
 2. Qu'est-ce que l'injection de dependance dans le constructeur ? (4 points)
 
----
+<br/>
+<br/>
 
-## Question 6 (12 points)
+# Question 6
 
 **Extrait** : XtraWork/Controllers/EmployeeController.cs
 ```csharp
@@ -192,9 +188,10 @@ public async Task<ActionResult<EmployeeResponse>> Create([FromBody] EmployeeRequ
 2. Pourquoi attraper `NotFoundException` et retourner `BadRequest` ? (4 points)
 3. Expliquez `[FromBody]` (3 points)
 
----
+<br/>
+<br/>
 
-## Question 7 (10 points)
+# Question 7
 
 **Extrait** : XtraWork/Program.cs
 ```csharp
@@ -218,9 +215,10 @@ builder.Services.AddAuthentication(JwtBearerDefaults.AuthenticationScheme)
 1. Expliquez chaque validation (ValidateIssuer, ValidateAudience, etc.) (7 points)
 2. Pourquoi valider la cle de signature ? (3 points)
 
----
+<br/>
+<br/>
 
-## Question 8 (8 points)
+# Question 8 
 
 **Extrait** : XtraWork/Program.cs
 ```csharp
@@ -234,9 +232,10 @@ app.MapControllers();
 1. Pourquoi cet ordre specifique ? (5 points)
 2. Que se passerait-il si `UseAuthentication` venait avant `UseCors` ? (3 points)
 
----
+<br/>
+<br/>
 
-## Question 9 (8 points)
+# Question 9
 
 **Extrait** : XtraWork/Repositories/XtraWorkContext.cs
 ```csharp
@@ -253,9 +252,10 @@ modelBuilder.Entity<Employee>(entity =>
 1. Expliquez la relation configuree (HasOne, WithMany) (5 points)
 2. Que fait `OnDelete(DeleteBehavior.Restrict)` ? (3 points)
 
----
+<br/>
+<br/>
 
-## Question 10 (Bonus - 10 points)
+# Question 10 
 
 **Extrait complet** : Flow d'une requete GET /api/employees
 
@@ -291,23 +291,4 @@ public async Task<List<Employee>> GetAllAsync()
 ```
 
 **Question** : Tracez le flow complet de cette requete depuis le client HTTP jusqu'a la base de donnees et retour. Expliquez le role de chaque couche.
-
----
-
-## Fin de l'examen
-
-**Total** : 100 points
-
-**Bareme** :
-- 90-100 : Excellent
-- 80-89 : Tres bien
-- 70-79 : Bien
-- 60-69 : Passable
-- < 60 : Insuffisant
-
----
-
-**Date** : ___________________
-**Nom** : ___________________
-**Signature** : ___________________
 
